# ros-gst-bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml
audio_msgs/: CMakeLists.txt  package.xml
audio_msgs/msg/: Audio.msg
docker-long/: Dockerfile
gst-rosvideosink/plugins/: Makefile  Makefile.am  gstrosvideosink.c  gstrosvideosinkplugin.c
gst-rosvideosink/plugins/.deps/: libgstrosvideosink_la-gstrosvideosink.Plo
gst-rosvideosink/plugins/.libs/: libgstrosvideosink.exp  libgstrosvideosink.ver
gst_bridge/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
gst_bridge/config/: example.config.yaml
gst_bridge/gst-rosaudiosink/: CMakeLists.txt  Makefile  configure.ac  libtool
gst_bridge/gst-rosaudiosink/autom4te.cache/: output.2  traces.1
gst_bridge/gst-rosaudiosink/plugins/: Makefile  Makefile.am  libgstrosaudiosink.la
gst_bridge/gst-rosaudiosink/plugins/.deps/: libgstrosaudiosink_la-gstrosaudiosinkplugin.Plo
gst_bridge/gst-rosaudiosink/plugins/.libs/: libgstrosaudiosink.exp  libgstrosaudiosink.la  libgstrosaudiosink.lai  libgstrosaudiosink.ver
gst_bridge/gst-rosaudiosink/tools/: Makefile.am  Makefile.in  gst-rosaudiosink
gst_bridge/gst-rosaudiosink/tools/.deps/: gst_rosaudiosink-gstrosaudiosink.Po
gst_bridge/gst-rosvideosink/: aclocal.m4
gst_bridge/gst-rosvideosink/autom4te.cache/: output.1  traces.1  traces.2
gst_bridge/gst-rosvideosink/plugins/: Makefile.in  gstrosvideosink.c  gstrosvideosink.c~  gstrosvideosink.h  libgstrosvideosink.la
gst_bridge/gst-rosvideosink/plugins/.deps/: libgstrosvideosink_la-gstrosvideosinkplugin.Plo
gst_bridge/gst-rosvideosink/plugins/.libs/: libgstrosvideosink.la  libgstrosvideosink.lai
gst_bridge/gst-rosvideosink/tools/: Makefile.am  Makefile.in
gst_bridge/gst-rosvideosink/tools/.deps/: gst_rosvideosink-gstrosvideosink.Po
gst_bridge/gst_bridge/: pipeline.py  pipeline_node.py  simplebin.py  webrtc_pipes.py  webrtc_sigchan.py  webrtc_transport_ws.py
gst_bridge/include/: glib-compat-private.h  rosaudiosink.h  rosaudiosrc.h  rosimagesink.h
gst_bridge/include/gst_bridge/: gst_bridge.h  rosaudiosink.h  rosaudiosrc.h  rosbaseiface.h  rosbasesink.h  rosbasesrc.h  rosimagesink.h  rosimagesrc.h  rostextsink.h  rostextsrc.h
gst_bridge/launch/: example.launch.py
gst_bridge/msg/: Audio.msg
gst_bridge/scripts/: pipeline.py  pipeline_node.py  simplebin.py  webrtc_sigchan.py  webrtcbin.py
gst_bridge/src/: gst_bridge.cpp  gstmultiudpsink.c  rosaudiosink.cpp  rosaudiosrc.cpp  rosbaseiface.cpp  rosbasesink.cpp  rosbasesrc.cpp  rosgstbridgeplugin.cpp  rosimagesink.cpp  rosimagesrc.cpp  rostextsink.cpp  rostextsrc.cpp
gst_pipeline/: .clang-format  CMakeLists.txt  README.md  package.xml  plugins.xml  setup.cfg  setup.py
gst_pipeline/config/: example.config.yaml  example_rx.config.yaml  webrtc_websockets.config.yaml
gst_pipeline/gst_pipeline/: README.md  pipeline.py  pipeline_node.py  simplebin.py  webrtc_pipes.py  webrtc_sigchan.py  webrtc_transport_ws.py
gst_pipeline/include/gst_pipeline/: gst_pipeline.h  gst_pipes.h  gst_pipes_plugin_app_elements.h  gst_pipes_plugin_base.h  gst_pipes_plugin_bridge.h  gst_pipes_plugin_buffer_observer.h  gst_pipes_plugin_clock_observer.h  gst_pipes_plugin_framegate.h  gst_pipes_plugin_parameters.h  gst_pipes_plugin_pause_srv.h  gst_pipes_plugin_snapshooter.h  gst_pipes_plugin_webrtc.h  gst_pipes_plugin_webrtc_base.h  gst_pipes_plugin_webrtc_ros.h  gst_pipes_plugin_webrtc_websockets.h  gst_pipes_plugins.h  plugin_base.h  syntax_sugar.h
gst_pipeline/launch/: example.launch.py  example_rx.launch.py
gst_pipeline/src/: gst_pipeline.cpp  gst_pipes.cpp  gst_pipes_plugin_app_elements.cpp  gst_pipes_plugin_bridge.cpp  gst_pipes_plugin_buffer_observer.cpp  gst_pipes_plugin_clock_observer.cpp  gst_pipes_plugin_framegate.cpp  gst_pipes_plugin_parameters.cpp  gst_pipes_plugin_pause_srv.cpp  gst_pipes_plugin_snapshooter.cpp  gst_pipes_plugin_webrtc.cpp  gst_pipes_plugin_webrtc_base.cpp  gst_pipes_plugin_webrtc_websockets.cpp  gst_pipes_plugins.cpp  syntax_sugar.cpp
gst_pipeline/test/gst_pipeline/: test_loader.cpp
gst_pipeline_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
gst_pipeline_plugins/config/: parameters_example.config.yaml
gst_pipeline_plugins/include/gst_pipeline_plugins/: bridge.h  buffer_observer.h  clock_observer.h  framegate.h  gst_pipes_plugin_bridge.h  gst_pipes_plugin_buffer_observer.h  gst_pipes_plugin_framegate.h  gst_pipes_plugin_pause_srv.h  metadata_hook.h  multifilesink_observer.h  net_clock.h  parameters.h  pause_srv.h  rtp_header_hook.h
gst_pipeline_plugins/include/gst_pipeline_plugins/meta/: gstmark.h
gst_pipeline_plugins/launch/: parameters_example.launch.py
gst_pipeline_plugins/src/: bridge.cpp  buffer_observer.cpp  clock_observer.cpp  framegate.cpp  metadata_hook.cpp  multifilesink_observer.cpp  net_clock.cpp  parameters.cpp  pause_srv.cpp  rtp_header_hook.cpp
gst_pipeline_plugins/src/meta/: gstmark.c
gst_pipeline_plugins/src/parameters/: parameter_conversions.cpp
gst_pipeline_plugins_webrtc/: CMakeLists.txt  README.md  datachannel_plugins.xml  package.xml  plugins.xml
gst_pipeline_plugins_webrtc/config/: dynamic_loop.config.yaml  peer_to_peer.config.yaml  websockets.config.yaml  websockets_and_datachannels.config.yaml
gst_pipeline_plugins_webrtc/include/gst_pipeline/: gst_pipes_plugin_webrtc_websockets.h
gst_pipeline_plugins_webrtc/include/gst_pipeline_plugins_webrtc/: base.h  datachannel.h  gst_pipes_plugin_webrtc_base.h  gst_pipes_plugin_webrtc_websockets.h  ros.h  websockets.h
gst_pipeline_plugins_webrtc/launch/: dynamic_loop.launch.py  peer_to_peer.launch.py  websockets.launch.py  websockets_and_datachannels.launch.py
gst_pipeline_plugins_webrtc/src/: base.cpp  datachannel.cpp  gst_pipes_plugin_webrtc_base.cpp  gst_pipes_plugin_webrtc_ros.cpp  gst_pipes_plugin_webrtc_websockets.cpp  websockets.cpp
gst_plugins/: CMakeLists.txt  package.xml
gst_plugins/include/: format_mapping.h  gstrosaudiosink.h  rosaudiosink.h
gst_plugins/src/: gstrosaudiosink.cpp  gstrosaudiosinkplugin.cpp  rosaudiosink.cpp
(+43 files in other folders)
