<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gst_bridge</name>
  <version>0.0.0</version>
  <description>Run ROS nodes in a gstreamer pipeline</description>
  <maintainer email="brettrd@brettrd.com">brettrd</maintainer>
  <license>LGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>std_msgs</build_depend>
  <build_depend>libgst-dev</build_depend>
  <build_depend>audio_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>audio_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
