plugin_LTLIBRARIES = libgstrosvideosink.la

# sources used to compile this plug-in
libgstrosvideosink_la_SOURCES = gstrosvideosinkplugin.c gstrosvideosink.c gstrosvideosink.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstrosvideosink_la_CFLAGS = $(GST_CFLAGS)
libgstrosvideosink_la_LIBADD = $(GST_LIBS)
libgstrosvideosink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

