plugin_LTLIBRARIES = libgstrosaudiosink.la

# sources used to compile this plug-in
libgstrosaudiosink_la_SOURCES = gstrosaudiosinkplugin.c gstrosaudiosink.c gstrosaudiosink.h

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstrosaudiosink_la_CFLAGS = $(GST_CFLAGS)
libgstrosaudiosink_la_LIBADD = $(GST_LIBS)
libgstrosaudiosink_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)

